# tensor-cuda-kernels

./: .gitignore  CMakeLists.txt
core/: device.h  dispatch.h
core/tests/: test_cpu2cuda.cpp  test_dispatch.cpp
profiling/: README.md
tensor/: op_registry.cpp  op_registry.h  ops.cpp  ops.h  register_ops.cpp  tensor.cpp  tensor.h  tensor_factory.cpp  tensor_factory.h
tensor/native/: arange.cu  cpu_kernels.h  cu_kernels.cuh  matmul.cu
tensor/native/cpu/: arange.cpp  matmul_naive.cpp
tensor/native/cuda/: any.cu  eq.cu  matmul_naive.cu  matmul_tile.cu
tensor/native/tests/: eq.cpp  matmul.cpp
tensor/tests/: test_arange.cpp  test_comparison.cpp  test_empty.cpp  test_matmul_naive.cpp  test_uniform.cpp
